python-web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  type: NodePort
  selector:
    app: vinay-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort : 30007
